@@ -1,5 +1,16 @@
 2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
+    (tickLength): New field,
+    (HighLowRenderer): Initialise tickLength,
+    (getTickLength): New method,
+    (setTickLength): Likewise,
+    (findRangeBounds): New method override,
+    (drawItem): Use new tickLength field,
+    (equals): Check new field.
+
+2006-06-16  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/labels/IntervalXYItemLabelGenerator.java: 
     New class.
 
